--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,5 @@
 <div class="container" ng-controller="LoginController">
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{alert.message}}</alert>
     <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Zaloguj się</h2>
         <input type="text" name="auth[login]" ng-model="auth.login" class="form-control" placeholder="Login" required autofocus>
