--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,8 +1,11 @@
+/*
 BODY {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
 }
+
+*/
 
 .form-signin {
   max-width: 330px;
