--- a/public/views/newticket.html
+++ b/public/views/newticket.html
@@ -1,4 +1,31 @@
 <ng-include src="'views/navbar.html'"></ng-include>
 <div class="container" ng-controller="TicketsController">
-    <h1>Nowy ticket joł</h1>
+    <h1>Nowe zgłoszenie</h1>
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{alert.message}}</alert>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="ticketSummary" class="col-sm-2 control-label">Tytuł</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="ticketSummary" ng-model="newticket.summary" placeholder="Tytuł">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="ticketDescription" class="col-sm-2 control-label">Opis</label>
+            <div class="col-sm-10">
+                <textarea id="ticketDescription" cols="40" rows="5" class="form-control" ng-model="newticket.description" placeholder="Opis"></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="ticketKeywords" class="col-sm-2 control-label">Słowa kluczowe</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="ticketKeywords" ng-model="newticket.keywords" placeholder="Słowa kluczowe">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button class="btn btn-primary" ng-click="create(newticket)">Zapisz</button>
+                <button class="btn" ng-click="cancel()">Anuluj</button>
+            </div>
+        </div>
+    </form>
 </div>
