--- a/public/views/tickets.html
+++ b/public/views/tickets.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="ticket in tickets">
+            <tr ng-repeat="ticket in tickets" ng-click="show(ticket.id)">
                 <td>{{ticket.id}}</td>
                 <td>{{ticket.createdAt}}</td>
                 <td>{{ticket.summary}}</td>
