--- a/public/views/ticket.html
+++ b/public/views/ticket.html
@@ -17,7 +17,7 @@
                 </dl>
                 <dl class="col-sm-6 dl-horizontal">
                     <dt>Status</dt>
-                    <dd>{{ticket.status}} ({{ticket.resolution}})</dd>
+                    <dd>{{ticket.status}}<span ng-if="ticket.resolution"> ({{ticket.resolution}})</span></dd>
                     <dt>Priorytet</dt>
                     <dd>{{ticket.priority}}</dd>
                     <dt>Słowa kluczowe</dt>
@@ -27,18 +27,32 @@
             <p>{{ticket.description}}</p>
         </div>
     </div>
+    <div class="panel panel-default" ng-repeat="change in changes">
+        <div class="panel-heading">
+            <h3 class="panel-title">Zmiana {{change.createdAt}} dokonana przez {{change.author}}</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row" ng-if="change.status">
+                <div class="col-sm-2">Status</div>
+                <div class="col-sm-10">{{change.status.oldvalue}} -&gt; {{change.status.newvalue}} <span ng-if="change.resolution.newvalue"> ({{change.resolution.newvalue}})</span></div>
+            </div>
+            <div class="row" ng-if="change.comment">
+                <div class="col-sm-2">Komentarz</div>
+                <div class="col-sm-10">{{change.comment.newvalue}}</span></div>
+            </div>
+        </div>
+    </div>
     <hr>
     <form class="form-horizontal">
         <div class="form-group">
             <label for="comment" class="col-sm-2 control-label">Dodaj komentarz</label>
             <div class="col-sm-10">
-                <textarea  cols="40" rows="5" class="form-control"  placeholder="Komentarz"></textarea>
+                <textarea  cols="40" rows="5" class="form-control"  placeholder="Komentarz" ng-model="newcomment"></textarea>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button class="btn btn-primary">Podgląd</button>
-                <button class="btn btn-primary">Dodaj</button>
+                <button class="btn btn-primary" ng-click="addcomment(newcomment)">Dodaj</button>
             </div>
         </div>
     </form>
